<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:gravity="center"
    tools:context=".admin.AdminDashboardActivity">


        <TextView
            android:id="@+id/titleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/admin_dashboard"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginBottom="32dp" />

        <Button
            android:id="@+id/viewUsersBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/view_users"
            android:layout_marginBottom="16dp" />

        <Button
            android:id="@+id/viewReportsBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/report_statistics"
            android:layout_marginBottom="16dp" />

        <Button
            android:id="@+id/manageCounselorsBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/manage_counselors"
            android:layout_marginBottom="16dp" />

        <Button
            android:id="@+id/viewResourcesBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/view_resources"
            android:layout_marginBottom="16dp" />

    </LinearLayout>


