<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    tools:context=".counselor.PublishArticle">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/publish_resource"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginBottom="16dp"/>

        <EditText
            android:id="@+id/titleEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/title"
            android:layout_marginBottom="16dp"/>

        <EditText
            android:id="@+id/contentEditText"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:hint="@string/content"
            android:gravity="top"
            android:layout_marginBottom="16dp"
            android:inputType="textMultiLine"/>

        <Button
            android:id="@+id/publishBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/publish"/>
    </LinearLayout>

