<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".splash_screen">


        <!-- App logo -->
        <ImageView
            android:id="@+id/logoImage"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerInParent="true"
            android:src="@drawable/poster"
            android:contentDescription="@string/app_logo" />

        <!-- App name -->
        <TextView
            android:id="@+id/appNameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hu_xing"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:layout_below="@id/logoImage"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp" />

        <!-- Tagline -->
        <TextView
            android:id="@+id/taglineText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/guard_your_journey_fearless_at_every_step"
            android:textSize="16sp"
            android:textColor="@android:color/white"
            android:layout_below="@id/appNameText"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp" />

    </RelativeLayout>

